Integracion con el Backend + Testing